--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <h1 class="mb-0">Abiodun
             <span class="text-primary">Giwa</span>
           </h1>
-          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+          <div class="subheading mb-5">562 Blair Creek Dr · Kitchener, CO 80810 · (416) 585-8468 ·
             <a href="mailto:adehinde@yahoo.com">adehinde@yahoo.com</a>
           </div>
           <p class="mb-5">Learning via github.</p>
@@ -115,23 +115,23 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
+              <h3 class="mb-0">Web Student</h3>
+              <div class="subheading mb-3">Conestoga College</div>
               <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">July 2018 - Present</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
+              <h3 class="mb-0">Student learning how to deploy Web site</h3>
+              <div class="subheading mb-3">Conestoga College</div>
               <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <span class="text-primary">Second Semester 2018</span>
             </div>
           </div>
 
